added image tests